--- a/styles/styles.css
+++ b/styles/styles.css
@@ -866,14 +866,38 @@ body {
   .sign_btn {
     display: none !important;
   }
+  .header_text .banner_text_1 {
+    font-size: 3.25rem;
+  }
+  .header_text .banner_text_2 {
+    font-size: 1.2rem;
+  }
+  .other_brand .brands .branding_list .img1 {
+    width: 120px !important;
+  }
+  .other_brand .brands .branding_list .img2 {
+    width: 100px !important;
+  }
+  .other_brand .brands .branding_list .img3 {
+    width: 75px !important;
+  }
+  .other_brand .brands .branding_list .img4 {
+    width: 120px !important;
+  }
+  .other_brand .brands .branding_list .img5 {
+    width: 110px !important;
+  }
 }
 
 @media only screen and (min-width: 600px) {
   .header_menu {
     display: none !important;
   }
-  .sign_btn {
-    display: none !important;
+}
+
+@media only screen and (max-width: 320px) {
+  .header_text .banner_text_1 {
+    font-size: 2.25rem !important;
   }
 }
 
