--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -757,7 +757,7 @@ body{
             height: auto;
             .branding_list{
                 img{
-                    margin: 25px auto;
+                    margin: 25px auto !important;
                 }
                 .img1{
                     width: 120px !important;
