--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -735,7 +735,7 @@ body{
 
 }
 // Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
     .header_menu {
         display: none !important;
     }
@@ -781,7 +781,7 @@ body{
 // Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
     .header_menu {
-        display: none !important;
+        // display: none !important;
     }
     .sign_btn {
         // display: none !important;
