--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -90,6 +90,7 @@ background-color: red !important;
         display: flex;
        align-items: center;
         .logo {
+            cursor: pointer;
             font-size: 25px;
             font-weight: bold;
             img {
@@ -162,7 +163,7 @@ body{
 }
 .header_text{
     position: absolute;
-    top: 50px;
+    top: 110px;
     width: 100%;
 }
 .banner_text_1{
@@ -398,8 +399,8 @@ body{
         }
         .img_section{
             background-color: white;
-            box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
-            border: solid 1px rgba(51, 74, 192, 0.17);
+            // box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
+            // border: solid 1px rgba(51, 74, 192, 0.17);
             // box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0), 0 4px 4px rgba(0, 0, 0, 0), 0 6px 8px rgba(0, 0, 0, 0), 0 2px 9px rgba(0, 0, 0, 0.17);
             // height: 100%;
             height: 479px;
