--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -403,7 +403,7 @@ body{
             // border: solid 1px rgba(51, 74, 192, 0.17);
             // box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0), 0 4px 4px rgba(0, 0, 0, 0), 0 6px 8px rgba(0, 0, 0, 0), 0 2px 9px rgba(0, 0, 0, 0.17);
             // height: 100%;
-            height: 479px;
+            // height: 479px;
             // width: 65%;
             border-top-right-radius: 28px;
             border-top-left-radius: 28px;
