--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -76,6 +76,7 @@ background-color: red !important;
     // position: fixed;
     width: 100%; 
     z-index: 12;
+    position: relative;
     a {
         float: left;
         color: $text-subtext-color;
@@ -398,17 +399,17 @@ body{
             }
         }
         .img_section{
-            background-color: white;
+            // background-color: white;
             // box-shadow: 0 7px 12px 0 rgba(16, 31, 108, 0.07);
             // border: solid 1px rgba(51, 74, 192, 0.17);
             // box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0), 0 4px 4px rgba(0, 0, 0, 0), 0 6px 8px rgba(0, 0, 0, 0), 0 2px 9px rgba(0, 0, 0, 0.17);
             // height: 100%;
             // height: 479px;
             // width: 65%;
-            border-top-right-radius: 28px;
-            border-top-left-radius: 28px;
-            border-bottom-left-radius: 28px;
-            border-bottom-right-radius: 70px;
+            // border-top-right-radius: 28px;
+            // border-top-left-radius: 28px;
+            // border-bottom-left-radius: 28px;
+            // border-bottom-right-radius: 70px;
             img {
                 width: 100%;
                 height: 100%;
@@ -423,6 +424,8 @@ body{
             background-image: url("../images/Mascot.jpg");
             background-position: center;
             background-size: cover;
+            height: 479px;
+
         }
     }
 }
