changed image new one mobile responsive

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -425,7 +425,6 @@ body{
             background-position: center;
             background-size: cover;
             height: 479px;
-
         }
     }
 }
@@ -1034,7 +1033,7 @@ body{
             // margin: auto auto 16px;
         }
         .img_section{
-            height: 355px;
+            // height: 355px;
         }
         .mobile_responce_img{
             display: block !important;
