--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,5 @@
-$primary-color: #334ac0;
+// $primary-color: #334ac0;
+$primary-color: #002ee5;
 $primary-background-color: #ffffff;
 $secondary-background-color: rgba(51, 74, 192, 0.03);
 $text-primary-color: #2b2a35;
@@ -34,6 +35,13 @@ $darck-background-color: rgba(192, 152, 51, 0.05);
 @font-face {
     font-family: "fontGraphikSemibold";
     src: url("../plugin/fonts/graphik/GraphikSemibold.otf");
+}
+@font-face {
+    font-family: "fontGraphikRegular";
+    src: url("../plugin/fonts/graphik/GraphikRegular.otf");
+}
+.fontGraphikRegular{
+    font-family: "fontGraphikRegular";
 }
 .fontGraphikLight{
     font-family: "fontGraphikLight";
@@ -95,7 +103,8 @@ background-color: red !important;
             font-size: 25px;
             font-weight: bold;
             img {
-                width: 132px;
+                width: 134px;
+                // height: 36px;
             }
         }   
     }
@@ -194,6 +203,11 @@ body{
     border: none;
     font-weight: 700;
     border-radius: 5px;
+    transition: all 1s;
+    &:hover{
+        // padding: 22px 34px;
+        // box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
+    }
     &:focus{
       outline:none;
     }
@@ -232,6 +246,7 @@ body{
     text-align: center;
     margin-bottom: 8%;
     .text{
+        margin-bottom: 1%;
         h1 {
             color: $text-primary-color;
             font-size: 2.6rem;
@@ -246,14 +261,21 @@ body{
     }
     .card_div{
         .card-div{
-            margin-top: 5%;
+            margin-top: 7%;
+            transition: all 1.5s;
+            &:hover{
+                margin-top: 3%;
+            }
         }
         text-align: left;
         .card--{
-            background-color: #B3EFFF;
+            cursor: pointer;
+            background-color: #69fdef;
+            // background-color: #B3EFFF;
             padding: 54px;
             border-radius: 9px;
-            background-color: $card-background-color;
+            // background-color: $card-background-color;
+            box-shadow: 0 20px 25px 0 rgba(51, 74, 192, 0.06);
             .card--head{
                 margin-top: 16px;
                 font-weight: bold;
@@ -285,24 +307,24 @@ body{
                 }
             }
             .Oval_idea {
-                box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
-                border: solid 1px #d4e4e6;
+                // box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
+                // border: solid 1px #d4e4e6;
                 img{
                     width: 33px;
                     height: 42px;
                 }
               }
             .Oval_product {
-                box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
-                border: solid 1px #dddfec;
+                // box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
+                // border: solid 1px #dddfec;
                 img {
                     width: 42px;
                     height: 31px;
                 }
             }
             .Oval_build{
-                box-shadow: 0 3px 1px 0 rgba(141, 99, 29, 0.1);
-                border: solid 1px #e9dcc7;
+                // box-shadow: 0 3px 1px 0 rgba(141, 99, 29, 0.1);
+                // border: solid 1px #e9dcc7;
                 img {
                     width: 31px;
                     height: 39px;
@@ -318,6 +340,7 @@ body{
                 top: -45px;
                 left: 65px;
                 border: .5px solid #0000002e;
+                box-shadow: 0 3px 1px 0 rgba(141, 99, 29, 0.1);
                 height: 88px;
                 text-align: center;
                 width: 88px;
@@ -339,7 +362,7 @@ body{
 
 .why_us{
     // background-color: $secondary-background-color;
-    padding-bottom: 6%;
+    // padding-bottom: 6%;
     h1{
         font-size: 2.85rem;
         font-weight: 700;
@@ -361,8 +384,8 @@ body{
         color: $text-secondary-color;
     }
     .row{
-        padding-top: 6%;
-        padding-bottom: 6%;
+        padding-top: 8%;
+        padding-bottom: 8%;
         .text_para{
             line-height: 2.1;
             color: $text-tertiary-color;
@@ -371,7 +394,7 @@ body{
             font-size: 1.25rem;
         }
         .btnn{
-            color: #334AC0;
+            color: #002ee5;
             padding:0px;
             font-weight: 700;
             text-decoration: none;
@@ -383,7 +406,7 @@ body{
         .fa_icon{
             font-size: 28px;
             padding: 16px;
-            background-color: #16a1b1;
+            background-color: #ff8f00;
             color: white;
             border-radius: 50px;
             height: 74px;
@@ -433,7 +456,7 @@ body{
 
 .our_secrets{
     background-color: #F9F9FD;
-    padding-bottom: 6%;
+    padding-bottom: 8%;
     h1{
         font-weight: 700;
         font-size: 2.85rem;
@@ -460,7 +483,8 @@ body{
             border: none;
             // width: 376px;
             // height: 264px;
-            box-shadow: 0 20px 25px 0 rgba(51, 74, 192, 0.06);
+            // box-shadow: 0 20px 25px 0 rgba(51, 74, 192, 0.06);
+            box-shadow: 0 0.3px 1px 0 rgba(51, 74, 192, 0.12), 0 10px 20px 0 rgba(51, 74, 192, 0.12);
             border: solid 1px rgba(51, 74, 192, 0.12);
             // box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0), 0 4px 4px rgba(0, 0, 0, 0), 0 6px 8px rgba(0, 0, 0, 0), 0 2px 9px rgba(0, 0, 0, 0.17);
         }
@@ -494,24 +518,24 @@ body{
                 }
             }
             .Oval_pro{
-                box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
-                border: solid 1px rgba(22, 161, 177, 0.22);
+                // box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
+                // border: solid 1px rgba(22, 161, 177, 0.22);
             }
             .Oval_flash{
-                box-shadow: 0 3px 1px 0 rgba(141, 99, 29, 0.1);
-                border: solid 1px #e9dcc7;
+                // box-shadow: 0 3px 1px 0 rgba(141, 99, 29, 0.1);
+                // border: solid 1px #e9dcc7;
                 img {
                     width: 22px;
                     height: 33px;
                 }
             }
             .Oval_crown{
-                box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
-                border: solid 1px #d4e4e6;
+                // box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
+                // border: solid 1px #d4e4e6;
             }
             .Oval_group_join{
-                box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
-                border: solid 1px #dddfec;
+                // box-shadow: 0 3px 1px 0 rgba(51, 74, 192, 0.17);
+                // border: solid 1px #dddfec;
             }
             .card-text{
                 color: $text-tertiary-color;
@@ -519,10 +543,11 @@ body{
                 line-height: 33px;
             }
             .fa_icon{
-                // box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
-                // box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
+                box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.07);
+                border: solid 1px rgba(0, 0, 0, 0.09);
                 font-size: 28px;
-                padding: 26px 23px;
+                // padding: 26px 23px;
+                display: flex;
                 background-color: white;
                 border-radius: 60px;
                 position: absolute;
@@ -534,6 +559,7 @@ body{
                 width: 81px;
                 vertical-align: middle;
                 img {
+                    margin: auto;
                     width: 35px;
                     display: flex;
                     align-items: center;
@@ -549,7 +575,7 @@ body{
 
 .crayond_ceo{
     background-color: $darck-background-color;
-    padding: 6% 0;
+    padding: 8% 0;
     .about-crayond {
         display: flex;
         .row{
@@ -657,8 +683,8 @@ body{
 }
 
 .footer{
-    padding-bottom: 6%;
-    padding-top: 6%;
+    padding-bottom: 4%;
+    padding-top: 4%;
     .logo_address{
         img{
             margin-bottom: 25px;
@@ -666,10 +692,12 @@ body{
         p {
             color: $text-subtext-color;
             margin-bottom: 8px;
+            font-size: 16px;
         }
     }
     .footer_menu{
-        margin-bottom: 25px;
+        // margin-bottom: 25px;
+        margin: 0;
     }
     ul {
         padding: 0;
@@ -720,6 +748,18 @@ body{
         i {
             margin: auto;
             color: $primary-color;
+        }
+    }
+    .footer_address{
+        display: flex;
+        align-items: center;
+        padding-right: 0;
+        p{
+            margin: auto 0;
+            width: 100%;
+            border-right: 1px solid rgba(25, 34, 79, 0.08);
+            font-size: 14px;
+            color: $text-subtext-color;
         }
     }
 }
