changed image new one mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -794,6 +794,7 @@ body {
 
 .footer_social_media {
   border-top: 1px solid rgba(25, 34, 79, 0.08);
+  padding: 6px 0px;
 }
 
 .footer_social_media .footer_list {
@@ -898,6 +899,11 @@ body {
     font-size: 1.2rem;
   }
   .who_you_are .card_div .card-div {
+    -webkit-transition: none;
+    transition: none;
+    margin-top: 8% !important;
+  }
+  .who_you_are .card_div .card-div:hover {
     margin-top: 8% !important;
   }
   .who_you_are .card_div .card-div .card-- {
@@ -1046,8 +1052,13 @@ body {
     font-size: 1.1rem;
   }
   .who_you_are .card_div .card-div {
+    -webkit-transition: none;
+    transition: none;
     margin-top: 15%;
     margin-bottom: 4%;
+  }
+  .who_you_are .card_div .card-div:hover {
+    margin-top: 15%;
   }
   .who_you_are .card_div h2 {
     font-size: 1.5rem;
