--- a/styles/styles.css
+++ b/styles/styles.css
@@ -855,6 +855,15 @@ body {
   color: #43434b;
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .who_you_are .card_div .card-div .card-- .card--head {
+    font-size: 1.5rem;
+  }
+  .who_you_are .card_div .card-div .card-- .card--text {
+    font-size: 1.2rem;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header_menu {
     display: none !important;
