--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -775,8 +775,21 @@ body{
 
 }
 // Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .who_you_are {
+        .card_div{
+           .card-div {
+               .card--{
+                   .card--head {
+                       font-size: 1.5rem;
+                   }
+                   .card--text{
+                       font-size: 1.2rem;
+                   }
+               }
+           }
+         }
+       }
 }
 // Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
