changed tap titel

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -981,7 +981,7 @@ body{
 @media only screen and (max-width: 768px) {
     .header_text{
         .banner_text_1{
-            font-size: 2.25rem !important;
+            font-size: 2rem !important;
         }
     }
 }
@@ -1008,12 +1008,9 @@ body{
       display: none;
   }
   .header_text {
-    //   position: unset !important;
+    //   position: relative !important;
     //   display: block;
-    //   margin-top: 24%;
-
-      position: relative !important;
-      display: block;
+      position: unset !important;
       margin-top: 15%;
   }
   .banner_text_1 {
