--- a/styles/styles.css
+++ b/styles/styles.css
@@ -999,7 +999,7 @@ body {
 
 @media only screen and (max-width: 768px) {
   .header_text .banner_text_1 {
-    font-size: 2.25rem !important;
+    font-size: 2rem !important;
   }
 }
 
@@ -1024,8 +1024,7 @@ body {
     display: none;
   }
   .header_text {
-    position: relative !important;
-    display: block;
+    position: unset !important;
     margin-top: 15%;
   }
   .banner_text_1 {
