--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1163,12 +1163,19 @@ body{
   }
 
   .footer{
+    padding-bottom: 10%;
+    padding-top: 10%;
       .logo_address{
+        padding-bottom: 16px;
         //   text-align: center;
+        img{
+            margin-bottom: 6px;
+        }
       }
   }
 
   .footer_social_media{
+      padding: 25px 0px;
       .tp{
           .footer_list{
               padding: 15px 0px;
@@ -1176,7 +1183,18 @@ body{
           }
       }
       .social_icon_link{
-        justify-content: center !important;
+        // justify-content: center !important;
+        display: none !important;
+      }
+      .mobile_social_links{
+        margin-bottom: 30px;
+          display: flex !important;
+      }
+      .footer_address{
+        padding-bottom: 5px;
+          p{
+              margin-top: 0 !important;
+          }
       }
   }
 }
