--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -793,13 +793,24 @@ body{
 }
 // Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+    .header{
+        position: fixed;
+        top: 0;
+        border-bottom: 1px solid #f1f1f1;
+        padding: 10px;
+      }
     .header_menu {
         display: none !important;
     }
     .sign_btn {
         display: none !important;
     }
+    .video_player{
+        height: 50vh;
+        margin-bottom: 60vh;
+    }
     .header_text{
+        top: 65px;
         .banner_text_1{
             font-size: 3.25rem;
         }
@@ -993,6 +1004,8 @@ body{
   .header{
     position: fixed;
     top: 0;
+    border-bottom: 1px solid #f1f1f1;
+    padding: 10px;
   }
   .header_menu {
       display: none !important;
