--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -203,7 +203,8 @@ body{
 }
 .header_text{
     // position: absolute;
-    padding-top: 110px;
+    // padding-top: 110px;
+    padding-top: 10%;
     width: 100%;
     height: fit-content;
     padding-bottom: 6%;
