--- a/styles/styles.css
+++ b/styles/styles.css
@@ -234,7 +234,7 @@ body {
 }
 
 .header_text {
-  padding-top: 110px;
+  padding-top: 10%;
   width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
