--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -848,7 +848,14 @@ body{
     .our_mission_title{ 
         text-align: center;
         .title_mobile{
-            
+            h1{
+                color: #2b2a35;
+            }
+            .explore{
+                background-color: $primary-color;
+                color: $color-white;
+                margin-top: 26px;
+            }
         }
         h5{
             font-size: 16px;
@@ -862,7 +869,8 @@ body{
         }
         p{
             color: $text-tertiary-color;
-            font-size: 24px;
+            font-size: 22px;
+            line-height: 2;
             font-weight: normal;
         }
     }
@@ -875,6 +883,9 @@ body{
             background-color: #ffffff;
             padding: 10px 20px;
             color: $text-subtext-color;
+            font-family: fontGraphikMedium !important;
+            font-size: 13px;
+            font-weight: normal !important;
             // font-weight: 500;
         }
         .active{
@@ -906,6 +917,69 @@ body{
             font-weight: normal;
             text-align: inherit;
             margin-top: 15px;
+            line-height: 2;
+        }
+    }
+}
+
+
+.epic_works{
+    .epic_title{
+        text-align: center;
+
+
+        h5{
+            font-size: 16px;
+            color: $primary-color;
+            font-weight: 500;
+        }
+        h2{
+            font-size: 4.2rem;
+            font-weight: 700;
+            color: $text-primary-color;
+        }
+        p{
+            color: $text-tertiary-color;
+            font-size: 22px;
+            font-weight: normal;
+            line-height: 2;
+
+        }
+    }
+    .event_section{
+        p{
+            color: $text-tertiary-color;
+        font-size: 24px;
+        font-weight: normal;
+        }
+    }
+
+}
+
+.fun_gallery{
+    h5{
+        font-size: 18px;
+    }
+}
+.current_opening{
+    h1{
+        font-size: 4.2rem;
+            font-weight: 700;
+            color: $text-primary-color;
+            margin-bottom: 15px;
+    }
+    .opening_section{
+       padding: 6%;
+       .positions_card{
+           .opening_titles{
+               font-size: 17px;
+               color: $text-tertiary-color;
+            }
+            button{
+                background-color:  $primary-color;
+                color: $color-white;
+                font-family: fontLatoBlack;
+            }
         }
     }
 }
