--- a/styles/styles.css
+++ b/styles/styles.css
@@ -923,6 +923,13 @@ body {
   color: #43434b;
 }
 
+.title_of_careerss {
+  position: absolute;
+  /* top: 110px; */
+  text-align: center;
+  bottom: 124px;
+}
+
 .our_mission_section {
   padding: 75px 15px;
 }
