--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -842,6 +842,12 @@ body{
 
 
 // opportunities page
+.title_of_careerss{
+    position: absolute;
+    /* top: 110px; */
+    text-align: center;
+    bottom: 124px;
+}
 
 .our_mission_section{
     padding: 75px 15px;
