--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -216,6 +216,12 @@ body{
     width: 100%;
     height: fit-content;
     padding-bottom: 6%;
+    background-image: url("../images/Website-Animation-Final-GIF.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    // background-size: contain;
+    background-size: cover;
+
 }
 .banner_text_1{
     // font-size: 4.8rem;
