--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,6 +246,10 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 6%;
+  background-image: url("../images/Website-Animation-Final-GIF.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .banner_text_1 {
