--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -215,7 +215,8 @@ body{
     padding-top: 10%;
     width: 100%;
     height: fit-content;
-    padding-bottom: 6%;
+    // padding-bottom: 6%;
+    margin-bottom: 6%;
     background-image: url("../images/Website-Animation-Final-GIF.gif");
     background-position: center;
     background-repeat: no-repeat;
@@ -242,7 +243,7 @@ body{
 }
 
 .banner_button{
-    width: 285px;
+    width: 300px;
     cursor: pointer;
     padding: 18px 30px;
     background-color: $primary-color;
@@ -820,10 +821,11 @@ body{
         display: flex;
         cursor: pointer;
         border-radius: 12px;
-        box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
-        border: solid 1px #d4e4e6;
         background-color: rgba(29, 46, 137, 0.05);
+        // transition: all 0.1s;
         &:hover {
+            border: solid 1px #d4e4e6;
+            box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
             background-color: $color-white;
         }
         i {
@@ -1001,6 +1003,9 @@ body{
 
 // Extra large devices (large laptops and desktops, 1200px and up)
 @media only screen and (min-width: 1440px) {
+    .header_text{
+        background-size: contain;
+    }
 
  }
 @media only screen and (min-width: 1200px) {
@@ -1013,10 +1018,10 @@ body{
            .card-div {
                .card--{
                    .card--head {
-                       font-size: 1.5rem;
+                       font-size: 1.4rem;
                    }
                    .card--text{
-                       font-size: 1.2rem;
+                       font-size: 1.15rem;
                    }
                }
            }
@@ -1261,6 +1266,7 @@ body{
       padding-top: 20%;
       display: flex;
       height: calc(100vh - 95px);
+      background-size: contain;
     //   padding-top: 16px !important;
   }
   .banner_text_1 {
